--- a/assets/scss/sections/_featured.scss
+++ b/assets/scss/sections/_featured.scss
@@ -20,6 +20,7 @@
 
       font-weight: bold;
       color: $grey-1;
+      text-align: center;
 
       ol {
         list-style-type: none;
